--- a/BeaconScanner/app/src/main/res/values/strings.xml
+++ b/BeaconScanner/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">BeaconScanner</string>
+    <string name="hint_text_user">Usuario</string>
+    <string name="hint_text_pass">Contraseña</string>
 </resources>
