--- a/BeaconScanner/app/src/main/res/values/strings.xml
+++ b/BeaconScanner/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Poluzone</string>
     <string name="hint_text_user">E-mail</string>
     <string name="hint_text_pass">Contraseña</string>
-    <string name="hint_text_pass_rep">Repite la contraseña</string>
+    <string name="hint_text_pass_rep">Confirmar contraseña</string>
 
     <string name="hint_text_tlf">Teléfono</string>
 
