error email ya en uso registrar

--- a/BeaconScanner/app/src/main/res/values/strings.xml
+++ b/BeaconScanner/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="errorEmail">Formato incorrecto</string>
     <string name="completar">Complete todos los campos</string>
     <string name="errorLogin">Contraseña y/o e-mail incorrectos</string>
+    <string name="yaExiste">El e-mail ya está en uso</string>
 
 
 </resources>
