implementar el speed dial fab con ruta y filtro

--- a/BeaconScanner/app/src/main/res/values/strings.xml
+++ b/BeaconScanner/app/src/main/res/values/strings.xml
@@ -37,4 +37,7 @@
     <string name="menu_sesion">Cerrar sesión</string>
     <string name="menu_perfil">Perfil</string>
 
+    <string name="filter">Filtro</string>
+    <string name="route">Rutas</string>
+
 </resources>
