--- a/BeaconScanner/app/src/main/res/values/strings.xml
+++ b/BeaconScanner/app/src/main/res/values/strings.xml
@@ -55,8 +55,7 @@
     <string name="activo">Activo</string>
     <string name="inactivo">Inactivo</string>
     <string name="porciento">70%</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="nomedidas">No hay medidas disponibles</string>
+    <string name="dist">Distancia recorrida:</string>
 
 </resources>
