--- a/BeaconScanner/app/src/main/res/values/strings.xml
+++ b/BeaconScanner/app/src/main/res/values/strings.xml
@@ -31,11 +31,14 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
+    <string name="inicio">Inicio</string>
     <string name="menu_home">Mapa</string>
     <string name="menu_foto">Polufoto</string>
     <string name="menu_ajustes">Ajustes</string>
     <string name="menu_sesion">Cerrar sesión</string>
     <string name="menu_perfil">Perfil</string>
+    <string name="menu_info">Info</string>
+
 
     <string name="filter">Filtro</string>
     <string name="route">Rutas</string>
@@ -47,7 +50,6 @@
 
     <string name="app_intro">Poluzone intro</string>
 
-    <string name="inicio">Inicio</string>
     <string name="cal">Calidad del aire</string>
     <string name="veinticuatro">Según las últimas 24 horas</string>
     <string name="estadonodo">Estado nodo: </string>
