--- a/BeaconScanner/app/src/main/res/values/strings.xml
+++ b/BeaconScanner/app/src/main/res/values/strings.xml
@@ -66,4 +66,5 @@
     <string name="si">Si</string>
     <string name="no">No</string>
 
+    <string name="entendido">Entendido</string>
 </resources>
