--- a/BeaconScanner/app/src/main/res/values/strings.xml
+++ b/BeaconScanner/app/src/main/res/values/strings.xml
@@ -67,4 +67,9 @@
     <string name="no">No</string>
 
     <string name="entendido">Entendido</string>
+    <string name="directiva">Los valores límite vienen fijados en el R.D. 1073/2003, transpuesto de la Directiva 1999/30/CE.</string>
+    <string name="calbien">Entre el 70–100%, significa que hay entre 3949–119999 ppm de contaminación en el aire.</string>
+    <string name="calmed">Entre el 30–69%, significa que hay entre 120000–146699 ppm de contaminación en el aire.</string>
+    <string name="calmal">Entre el 0–29%, significa que hay más de 146699 ppm de contaminación en el aire.</string>
+
 </resources>
