--- a/BeaconScanner/app/src/main/res/values/strings.xml
+++ b/BeaconScanner/app/src/main/res/values/strings.xml
@@ -71,5 +71,7 @@
     <string name="calbien">Entre el 70–100%, significa que hay entre 0–67 ppm de contaminación en el aire.</string>
     <string name="calmed">Entre el 30–69%, significa que hay entre 68–162 ppm de contaminación en el aire.</string>
     <string name="calmal">Entre el 0–29%, significa que hay más de 163 ppm de contaminación en el aire. <b>NIVEL PELIGROSO</b></string>
+    <string name="hola">Hola</string>
+
 
 </resources>
