--- a/BeaconScanner/app/src/main/res/values/strings.xml
+++ b/BeaconScanner/app/src/main/res/values/strings.xml
@@ -73,6 +73,10 @@
     <string name="calmal">Entre el 0–29%, significa que hay más de 163 ppm de contaminación en el aire. <b>NIVEL PELIGROSO</b></string>
     <string name="hola">Hola</string>
     <string name="mis_mediciones">Mis Mediciones</string>
+    <string name="_68_162">68-162</string>
+    <string name="valores">Valores:</string>
+    <string name="_163"><![CDATA[>163]]></string>
+    <string name="_67"><![CDATA[<67]]></string>
 
 
 </resources>
