--- a/BeaconScanner/app/src/main/res/values/strings.xml
+++ b/BeaconScanner/app/src/main/res/values/strings.xml
@@ -44,9 +44,12 @@
     <string name="route">Rutas</string>
 
     <string name="calidad">Calidad del aire</string>
-    <string name="ozono">Ozono</string>
+
+
+    <string name="co">Monóxido de carbono</string>
+    <string name="nox">Óxidos de nitrógeno</string>
     <string name="dioxidoAzufre">Dióxido de azufre</string>
-    <string name="irritantes">Gases irritantes</string>
+    <string name="ozono">Ozono</string>
 
     <string name="app_intro">Poluzone intro</string>
 
