informacion adicional gases

--- a/BeaconScanner/app/src/main/res/values/strings.xml
+++ b/BeaconScanner/app/src/main/res/values/strings.xml
@@ -39,6 +39,8 @@
     <string name="menu_perfil">Perfil</string>
     <string name="menu_info">Info</string>
 
+    <string name="informaciongases">Información general\n
+    sobre los gases</string>
 
     <string name="filter">Filtro</string>
     <string name="route">Rutas</string>
@@ -50,6 +52,7 @@
     <string name="nox">Óxidos de nitrógeno</string>
     <string name="dioxidoAzufre">Dióxido de azufre</string>
     <string name="ozono">Ozono</string>
+    <string name="resp">Gases irritantes</string>
 
     <string name="app_intro">Poluzone intro</string>
 
@@ -81,10 +84,13 @@
     <string name="_163"><![CDATA[>163]]></string>
     <string name="_67"><![CDATA[<67]]></string>
 
-    <string name="infoCo">Hola texto vacio predeterminado</string>
-    <string name="infoNOX">Hola texto vacio predeterminado</string>
-    <string name="infoDioxi">Hola texto vacio predeterminado</string>
-    <string name="infoOzono">Hola texto vacio predeterminado</string>
+    <string name="infoCo">El monóxido de carbono, también denominado óxido de carbono (II), gas carbonoso y anhídrido carbonoso (los dos últimos cada vez más en desuso), cuya fórmula química es CO, es un gas incoloro y altamente tóxico. Se produce por la combustión deficiente de sustancias como gas, gasolina, queroseno, carbón, petróleo, tabaco o madera. 55 mg/m³ (50 ppm) – TLV-TWA\n
+        TLV-TWA: concentración correspondiente a un día normal de 8 horas o una semana de 40 horas en la que los trabajadores pueden estar expuestos sin mostrar efectos adversos.</string>
+    <string name="infoNOX">El dióxido de nitrógeno es de color marrón-amarillento. Se forma como subproducto en los procesos de combustión a altas temperaturas, como en los vehículos motorizados y las plantas eléctricas. Por ello es un contaminante frecuente en zonas urbanas. Es un gas tóxico, irritante y precursor de la formación de partículas de nitrato. Estas llevan a la producción de ácido y elevados niveles de PM-2.5 en el ambiente. Afecta principalmente al sistema respiratorio.</string>
+    <string name="infoDioxi">El dióxido de azufre es un gas incoloro que, en altas concentraciones tiene un olor fuerte y penetrante que produce irritación de ojos y vías respiratorias. Se trata de una sustancia reductora que, con el tiempo, el contacto con el aire y la humedad, se convierte en trióxido de azufre. Tiene muchas aplicaciones industriales como desinfectante, antiséptico, gas refrigerante o lejía. </string>
+    <string name="infoOzono">Ozono es un gas que desprende olores fuertes y generalmente sin coloración, pero en grandes concentraciones puede volverse ligeramente azulado. Si se respira en grandes cantidades puede provocar una irritación en los ojos o la garganta, la cual suele pasar después de respirar aire fresco y rico en oxígeno durante algunos minutos.
+        \nEl límite recomendado de exposición es de 0,1 ppm. Entre 30 y 50 minutos de exposición pueden ser fatales.</string>
+    <string name="infoResp">Los gases respiratorios irritantes provocan una inflamación inespecífica del pulmón tras ser inhalados. Tienden a ser más hidrosolubles que los gases de mayor toxicidad para el parénquima pulmonar. Los vapores tóxicos son más peligrosos cuando tienen un umbral irritante alto; es decir, apenas hay aviso de que se está inhalando el vapor porque la irritación es escasa.</string>
 
 
 </resources>
